# LiveMark

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  run  temp.txt  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ARCHITECTURE.md  MILESTONES.md  PRD.md  ROADMAP.md  SYSTEM_DESIGN.md  TECH_DECISIONS.md  TECH_STACK.md  UI_TEST_PLAN.md  USER_FLOWS.md  UX_PRINCIPLES.md  VISION.md  market_idea.md  privacy-policy.md  tutorial.md  v2-audit.md  welcome.md
docs/archive/: audit-2026-03-13.md  milestones-v1.md  roadmap-v1.md
docs/future/: LLM.md  ideas.md  v2-planning-prompt.md
docs/v1/: architecture.md  tutorial.md
docs/v2/: architecture-v2.md  audit.md  cross-review.md  design-system-light-theme.md  prd-v2.md  roadmap-v2.md  testing-v2.md  ux-v2.md
docs/v3/: PROMPT.md  implementation.md  prd.md  test.md  ux-design.md
policy/: livemark-privacy-policy.html
scripts/: build-dmg.sh  version-sync.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: ai.rs  file.rs  filetree.rs  image.rs  mod.rs  preferences.rs
src/commands/: ai-commands.ts  all-commands.ts  export-commands.ts  file-commands.ts  registry.ts  source-view-guard.ts
src/editor/: ai-format-preservation.ts  editor.ts  highlight.ts  input-rules.ts  keymaps.ts  mermaid-loader.ts  mind-map.ts  schema.ts
src/export/: beautiful-doc.ts  docx-generator.ts  export-css.ts  html-template.ts
src/review/: engine.ts
src/state/: document.ts  feedback.ts  (+7 more)
(+104 files in other folders)
