[package]
name = "livemark"
version = "3.2.1"
edition = "2024"

[[bin]]
name = "LiveMark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6", features = ["macos_kqueue"] }
notify-debouncer-mini = "0.4"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
